review auth for IC
Removing authorOrg, because of author is only for audit and we cant use it for authorization. Change maintainer element to object with category(USER/ORG/COMMUNITY/EVOLVEUM) and needed variables for user(username) and org(reference to organization). Check authentication and authorization for all endpoints and important authorization method.

task: 11855