@@ -7,28 +7,12 @@
 package com.evolveum.midpoint.integration.catalog.service;
 
 import com.evolveum.midpoint.integration.catalog.configuration.CatalogProperties;
-import com.evolveum.midpoint.integration.catalog.object.Application;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationApplicationTag;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationOrigin;
-import com.evolveum.midpoint.integration.catalog.object.ApplicationTag;
-import com.evolveum.midpoint.integration.catalog.object.Capability;
-import com.evolveum.midpoint.integration.catalog.object.CountryOfOrigin;
-import com.evolveum.midpoint.integration.catalog.object.ConnVersionCapability;
-import com.evolveum.midpoint.integration.catalog.object.Connector;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorBundle;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorBundleVersion;
-import com.evolveum.midpoint.integration.catalog.object.ConnectorVersion;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethod;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodCapability;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodConnector;
-import com.evolveum.midpoint.integration.catalog.object.OwnedItem;
-import com.evolveum.midpoint.integration.catalog.object.IntegrationMethodType;
-import com.evolveum.midpoint.integration.catalog.object.LifecycleType;
-import com.evolveum.midpoint.integration.catalog.object.MidpointVersion;
+import com.evolveum.midpoint.integration.catalog.object.*;
 import com.evolveum.midpoint.integration.catalog.repository.MidpointVersionRepository;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
@@ -82,7 +66,6 @@ public class SupportTicketDescriptionBuilder {
             APPLICATION_PUBLISHED_NOTE, CONNECTOR_PUBLISHED_NOTE, FILES_NOTE);
 
     private final MidpointVersionRepository midpointVersionRepository;
-    private final CatalogContactResolver contactResolver;
     private final TutorialStorageService tutorialStorageService;
     private final CatalogProperties catalogProperties;
     private final OrganizationService organizationService;
@@ -198,7 +181,7 @@ public class SupportTicketDescriptionBuilder {
         bullet(body, "Description", singleLine(method.getDescription()));
         bullet(body, "Integration method type", integrationMethodTypes(method));
         bullet(body, "Supported midPoint version", midpointVersionRange(method));
-        bullet(body, "Author", method.getAuthor() != null ? withEmail(method, method.getAuthor()) : "unknown");
+        bullet(body, "Author", method.getAuthor() != null ? authorWithEmail(method.getAuthor()) : "unknown");
         bullet(body, "Maintainer", maintainer(method));
         bullet(body, "Submitted", timestamp(method.getCreatedAt()));
         appendCatalogLink(body, method, method.getApplication());
@@ -217,21 +200,18 @@ public class SupportTicketDescriptionBuilder {
         }
     }
 
-    /**
-     * A name with its address and organization where those are known: {@code u1 (u1@acme.com), Acme co.}
-     * Each part is optional, so a bare name is a normal result - see {@link CatalogContactResolver};
-     * {@code item} is the row the name is stamped on, which is where both parts come from.
-     */
-    private String withEmail(OwnedItem item, String name) {
-        if (name == null || name.isBlank()) {
+//TODO change javadoc
+//    /**
+//     * A name with its address and organization where those are known: {@code u1 (u1@acme.com), Acme co.}
+//     * Each part is optional, so a bare name is a normal result - see {@link CatalogContactResolver};
+//     * {@code item} is the row the name is stamped on, which is where both parts come from.
+//     */
+    private String authorWithEmail(Author author) {
+        if (author == null || StringUtils.isBlank(author.getUsername())) {
             return null;
         }
-        String labelled = contactResolver.emailOf(item, name)
-                .map(email -> name + " (" + email + ")")
-                .orElse(name);
-        return contactResolver.organizationOf(item, name)
-                .map(organization -> labelled + ", " + organization)
-                .orElse(labelled);
+        return author.getUsername() +
+                (StringUtils.isNotBlank(author.getEmail()) ? (" (" + author.getUsername() + ")") : "");
     }
 
     /**
@@ -239,11 +219,8 @@ public class SupportTicketDescriptionBuilder {
      * or just the name of the maintaining organization. Needed because an organization maintainer
      * is recorded with no username, which reading the username alone would report as unmaintained.
      */
-    private String maintainer(OwnedItem item) {
-        String name = item.getMaintainer();
-        return name != null && !name.isBlank()
-                ? withEmail(item, name)
-                : organizationService.displayName(item.getMaintainerOrgId());
+    private String maintainer(GetOwnershipOneMaintainer item) {
+        return organizationService.maintainerLabel(item);
     }
 
     private String integrationMethodTypes(IntegrationMethod method) {
@@ -471,7 +448,7 @@ public class SupportTicketDescriptionBuilder {
         bullet(body, "Description", singleLine(connector.getDescription()));
         bullet(body, "Connector versions (from - to)", versionRange(link));
         bullet(body, "Connector version", submittedVersion(connector));
-        bullet(body, "Author", withEmail(connector, connector.getAuthor()));
+        bullet(body, "Author", authorWithEmail(connector.getAuthor()));
         bullet(body, "Maintainer", maintainer(connector));
         bullet(body, "Fully qualified class name", connector.getFullyQualifiedClassName());
         bullet(body, "Created", timestamp(connector.getCreatedAt()));
@@ -512,7 +489,7 @@ public class SupportTicketDescriptionBuilder {
                         .toList();
         for (ConnectorVersion version : versions) {
             body.append("\n## Connector version ").append(blankToDash(version.getRevision())).append("\n\n");
-            bullet(body, "Author", withEmail(version, version.getAuthor()));
+            bullet(body, "Author", authorWithEmail(version.getAuthor()));
             bullet(body, "Maintainer", maintainer(version));
             bullet(body, "Created", timestamp(version.getCreatedAt()));
             appendBundleVersion(body, version.getConnectorBundleVersion());
